--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
   
   body{
       background-color: rgb(206, 40, 82);
+      font-family: monospace;
+      box-sizing: border-box;
+      margin-top: 60px;
   }
 
   #container {
@@ -25,31 +28,46 @@
     text-align: center;
   }
 
-  .active {
-    background:orange;
+  .activeBlack {
+    background:black;
     border: 0.5px solid rgb(155, 0, 0);
     margin: -1px;
-    
-    transition: all 0.05s ease;
-    
-    
+        transition: all 0.05s ease;   
+  }
 
-    
+  .activeRainbow {
+    background:white;
+    border: 0.5px solid rgb(155, 0, 0);
+    margin: -1px;
+        transition: all 0.05s ease;   
   }
 
 .contenedor{
  
     height: 50px;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-            margin-top: 30px;
+            margin-top: 20px;
   }
 
-#clear{
-    padding: 15px;
+button, input{
+  margin: 0 15px;
+    padding:  15px;
 }
 
-#grid-reset{
-  background-color: blue;
+
+
+.reset{
+  background-color: inherit;
+}
+
+#title{
+  margin-top: 50px;
+  color: rgb(255, 238, 0);
+  font-size: 80px;
+  
+
+
 }
